// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ts#agent generator > chat scripts for a2a protocol > should match snapshot for chat scripts with cognito auth > agentcore.ts (a2a, cognito) 1`] = `
"// Resolves the deployed TestProjectAgent agent from runtime config and authenticates requests to it.
import { randomUUID } from 'node:crypto';
import { getAppConfig } from '@aws-lambda-powertools/parameters/appconfig';

const SESSION_HEADER = 'X-Amzn-Bedrock-AgentCore-Runtime-Session-Id';

// AgentCore session ids must be at least 33 characters.
export const SESSION_ID = randomUUID().replaceAll('-', '').padEnd(33, '0');

export interface RemoteAgent {
  /** ARN of the deployed Bedrock AgentCore runtime. */
  arn: string;
  /** AWS region parsed from the runtime ARN. */
  region: string;
}

// Returns the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set, otherwise \`undefined\` to chat locally.
export const resolveRemoteAgent = async (): Promise<
  RemoteAgent | undefined
> => {
  const application = process.env.RUNTIME_CONFIG_APP_ID;
  if (!application) {
    return undefined;
  }
  const config = (await getAppConfig('agentcore', {
    application,
    environment: 'default',
    transform: 'json',
  })) as { agentRuntimes?: Record<string, string> };
  const arn = config?.agentRuntimes?.['TestProjectAgent'];
  if (!arn) {
    throw new Error(
      \`No deployed agent named 'TestProjectAgent' found in runtime configuration (application \${application}).\`,
    );
  }
  return { arn, region: arn.split(':')[3] };
};

/** The Cognito access token used to authenticate with the deployed agent. */
export const getAccessToken = (): string => {
  const accessToken = process.env.AGENT_ACCESS_TOKEN;
  if (!accessToken) {
    throw new Error(
      'AGENT_ACCESS_TOKEN is not set. Provide a Cognito access token to chat with the deployed agent.',
    );
  }
  return accessToken;
};

// A \`fetch\` that authenticates requests to the deployed agent and forwards the session id.
export const createAgentCoreFetch = (): typeof fetch => {
  const accessToken = getAccessToken();
  return (input, init) => {
    const headers = new Headers(init?.headers);
    headers.set(SESSION_HEADER, SESSION_ID);
    headers.set('Authorization', \`Bearer \${accessToken}\`);
    return fetch(input, { ...init, headers });
  };
};
"
`;

exports[`ts#agent generator > chat scripts for a2a protocol > should match snapshot for chat scripts with cognito auth > chat.ts (a2a, cognito) 1`] = `
"// Chat CLI for TestProjectAgent (A2A protocol). Connects to the local
// \`dev\` server, or the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set.
import {
  ClientFactory,
  ClientFactoryOptions,
  DefaultAgentCardResolver,
  JsonRpcTransportFactory,
} from '@a2a-js/sdk/client';
import { A2AChatAdapter, chatLoop } from 'agent-chat-cli';
import { createAgentCoreFetch, resolveRemoteAgent } from './agentcore.js';

const remote = await resolveRemoteAgent();

const url = remote
  ? \`https://bedrock-agentcore.\${remote.region}.amazonaws.com/runtimes/\${encodeURIComponent(remote.arn)}/invocations/\`
  : process.env.URL!;

// Remote requests are authenticated via a custom fetch; locally the default client talks plain HTTP.
const clientFactory = remote
  ? new ClientFactory({
      ...ClientFactoryOptions.default,
      transports: [
        new JsonRpcTransportFactory({
          fetchImpl: createAgentCoreFetch(),
        }),
      ],
      cardResolver: new DefaultAgentCardResolver({
        fetchImpl: createAgentCoreFetch(),
      }),
    })
  : undefined;

await chatLoop(new A2AChatAdapter({ clientFactory }), url);
"
`;

exports[`ts#agent generator > chat scripts for a2a protocol > should match snapshot for chat scripts with iam auth > agentcore.ts (a2a, iam) 1`] = `
"// Resolves the deployed TestProjectAgent agent from runtime config and authenticates requests to it.
import { randomUUID } from 'node:crypto';
import { getAppConfig } from '@aws-lambda-powertools/parameters/appconfig';
import { fromNodeProviderChain } from '@aws-sdk/credential-providers';
import { AwsClient } from 'aws4fetch';

const SESSION_HEADER = 'X-Amzn-Bedrock-AgentCore-Runtime-Session-Id';

// AgentCore session ids must be at least 33 characters.
export const SESSION_ID = randomUUID().replaceAll('-', '').padEnd(33, '0');

export interface RemoteAgent {
  /** ARN of the deployed Bedrock AgentCore runtime. */
  arn: string;
  /** AWS region parsed from the runtime ARN. */
  region: string;
}

// Returns the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set, otherwise \`undefined\` to chat locally.
export const resolveRemoteAgent = async (): Promise<
  RemoteAgent | undefined
> => {
  const application = process.env.RUNTIME_CONFIG_APP_ID;
  if (!application) {
    return undefined;
  }
  const config = (await getAppConfig('agentcore', {
    application,
    environment: 'default',
    transform: 'json',
  })) as { agentRuntimes?: Record<string, string> };
  const arn = config?.agentRuntimes?.['TestProjectAgent'];
  if (!arn) {
    throw new Error(
      \`No deployed agent named 'TestProjectAgent' found in runtime configuration (application \${application}).\`,
    );
  }
  return { arn, region: arn.split(':')[3] };
};

// A \`fetch\` that authenticates requests to the deployed agent and forwards the session id.
export const createAgentCoreFetch = (region: string): typeof fetch => {
  const credentialProvider = fromNodeProviderChain();
  return async (input, init) => {
    const headers = new Headers(init?.headers);
    headers.set(SESSION_HEADER, SESSION_ID);
    const client = new AwsClient({
      ...(await credentialProvider()),
      service: 'bedrock-agentcore',
      region,
    });
    return client.fetch(input, { ...init, headers });
  };
};
"
`;

exports[`ts#agent generator > chat scripts for a2a protocol > should match snapshot for chat scripts with iam auth > chat.ts (a2a, iam) 1`] = `
"// Chat CLI for TestProjectAgent (A2A protocol). Connects to the local
// \`dev\` server, or the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set.
import {
  ClientFactory,
  ClientFactoryOptions,
  DefaultAgentCardResolver,
  JsonRpcTransportFactory,
} from '@a2a-js/sdk/client';
import { A2AChatAdapter, chatLoop } from 'agent-chat-cli';
import { createAgentCoreFetch, resolveRemoteAgent } from './agentcore.js';

const remote = await resolveRemoteAgent();

const url = remote
  ? \`https://bedrock-agentcore.\${remote.region}.amazonaws.com/runtimes/\${encodeURIComponent(remote.arn)}/invocations/\`
  : process.env.URL!;

// Remote requests are authenticated via a custom fetch; locally the default client talks plain HTTP.
const clientFactory = remote
  ? new ClientFactory({
      ...ClientFactoryOptions.default,
      transports: [
        new JsonRpcTransportFactory({
          fetchImpl: createAgentCoreFetch(remote.region),
        }),
      ],
      cardResolver: new DefaultAgentCardResolver({
        fetchImpl: createAgentCoreFetch(remote.region),
      }),
    })
  : undefined;

await chatLoop(new A2AChatAdapter({ clientFactory }), url);
"
`;

exports[`ts#agent generator > chat scripts for ag-ui protocol > should match snapshot for chat scripts with cognito auth > agentcore.ts (ag-ui, cognito) 1`] = `
"// Resolves the deployed TestProjectAgent agent from runtime config and authenticates requests to it.
import { randomUUID } from 'node:crypto';
import { getAppConfig } from '@aws-lambda-powertools/parameters/appconfig';

const SESSION_HEADER = 'X-Amzn-Bedrock-AgentCore-Runtime-Session-Id';

// AgentCore session ids must be at least 33 characters.
export const SESSION_ID = randomUUID().replaceAll('-', '').padEnd(33, '0');

export interface RemoteAgent {
  /** ARN of the deployed Bedrock AgentCore runtime. */
  arn: string;
  /** AWS region parsed from the runtime ARN. */
  region: string;
}

// Returns the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set, otherwise \`undefined\` to chat locally.
export const resolveRemoteAgent = async (): Promise<
  RemoteAgent | undefined
> => {
  const application = process.env.RUNTIME_CONFIG_APP_ID;
  if (!application) {
    return undefined;
  }
  const config = (await getAppConfig('agentcore', {
    application,
    environment: 'default',
    transform: 'json',
  })) as { agentRuntimes?: Record<string, string> };
  const arn = config?.agentRuntimes?.['TestProjectAgent'];
  if (!arn) {
    throw new Error(
      \`No deployed agent named 'TestProjectAgent' found in runtime configuration (application \${application}).\`,
    );
  }
  return { arn, region: arn.split(':')[3] };
};

/** The Cognito access token used to authenticate with the deployed agent. */
export const getAccessToken = (): string => {
  const accessToken = process.env.AGENT_ACCESS_TOKEN;
  if (!accessToken) {
    throw new Error(
      'AGENT_ACCESS_TOKEN is not set. Provide a Cognito access token to chat with the deployed agent.',
    );
  }
  return accessToken;
};

// A \`fetch\` that authenticates requests to the deployed agent and forwards the session id.
export const createAgentCoreFetch = (): typeof fetch => {
  const accessToken = getAccessToken();
  return (input, init) => {
    const headers = new Headers(init?.headers);
    headers.set(SESSION_HEADER, SESSION_ID);
    headers.set('Authorization', \`Bearer \${accessToken}\`);
    return fetch(input, { ...init, headers });
  };
};
"
`;

exports[`ts#agent generator > chat scripts for ag-ui protocol > should match snapshot for chat scripts with cognito auth > chat.ts (ag-ui, cognito) 1`] = `
"// Chat CLI for TestProjectAgent (AG-UI protocol). Connects to the local
// \`dev\` server, or the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set.
import { AGUIChatAdapter, chatLoop } from 'agent-chat-cli';
import { createAgentCoreFetch, resolveRemoteAgent } from './agentcore.js';

const remote = await resolveRemoteAgent();

const url = remote
  ? \`https://bedrock-agentcore.\${remote.region}.amazonaws.com/runtimes/\${encodeURIComponent(remote.arn)}/invocations?qualifier=DEFAULT\`
  : process.env.URL!;

// Remote requests are authenticated via a custom fetch; locally the default agent talks plain HTTP.
const fetchImpl = remote ? createAgentCoreFetch() : undefined;

await chatLoop(new AGUIChatAdapter({ fetch: fetchImpl }), url);
"
`;

exports[`ts#agent generator > chat scripts for ag-ui protocol > should match snapshot for chat scripts with iam auth > agentcore.ts (ag-ui, iam) 1`] = `
"// Resolves the deployed TestProjectAgent agent from runtime config and authenticates requests to it.
import { randomUUID } from 'node:crypto';
import { getAppConfig } from '@aws-lambda-powertools/parameters/appconfig';
import { fromNodeProviderChain } from '@aws-sdk/credential-providers';
import { AwsClient } from 'aws4fetch';

const SESSION_HEADER = 'X-Amzn-Bedrock-AgentCore-Runtime-Session-Id';

// AgentCore session ids must be at least 33 characters.
export const SESSION_ID = randomUUID().replaceAll('-', '').padEnd(33, '0');

export interface RemoteAgent {
  /** ARN of the deployed Bedrock AgentCore runtime. */
  arn: string;
  /** AWS region parsed from the runtime ARN. */
  region: string;
}

// Returns the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set, otherwise \`undefined\` to chat locally.
export const resolveRemoteAgent = async (): Promise<
  RemoteAgent | undefined
> => {
  const application = process.env.RUNTIME_CONFIG_APP_ID;
  if (!application) {
    return undefined;
  }
  const config = (await getAppConfig('agentcore', {
    application,
    environment: 'default',
    transform: 'json',
  })) as { agentRuntimes?: Record<string, string> };
  const arn = config?.agentRuntimes?.['TestProjectAgent'];
  if (!arn) {
    throw new Error(
      \`No deployed agent named 'TestProjectAgent' found in runtime configuration (application \${application}).\`,
    );
  }
  return { arn, region: arn.split(':')[3] };
};

// A \`fetch\` that authenticates requests to the deployed agent and forwards the session id.
export const createAgentCoreFetch = (region: string): typeof fetch => {
  const credentialProvider = fromNodeProviderChain();
  return async (input, init) => {
    const headers = new Headers(init?.headers);
    headers.set(SESSION_HEADER, SESSION_ID);
    const client = new AwsClient({
      ...(await credentialProvider()),
      service: 'bedrock-agentcore',
      region,
    });
    return client.fetch(input, { ...init, headers });
  };
};
"
`;

exports[`ts#agent generator > chat scripts for ag-ui protocol > should match snapshot for chat scripts with iam auth > chat.ts (ag-ui, iam) 1`] = `
"// Chat CLI for TestProjectAgent (AG-UI protocol). Connects to the local
// \`dev\` server, or the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set.
import { AGUIChatAdapter, chatLoop } from 'agent-chat-cli';
import { createAgentCoreFetch, resolveRemoteAgent } from './agentcore.js';

const remote = await resolveRemoteAgent();

const url = remote
  ? \`https://bedrock-agentcore.\${remote.region}.amazonaws.com/runtimes/\${encodeURIComponent(remote.arn)}/invocations?qualifier=DEFAULT\`
  : process.env.URL!;

// Remote requests are authenticated via a custom fetch; locally the default agent talks plain HTTP.
const fetchImpl = remote ? createAgentCoreFetch(remote.region) : undefined;

await chatLoop(new AGUIChatAdapter({ fetch: fetchImpl }), url);
"
`;

exports[`ts#agent generator > chat scripts for http protocol > should match snapshot for chat scripts with cognito auth > agentcore.ts (http, cognito) 1`] = `
"// Resolves the deployed TestProjectAgent agent from runtime config and authenticates requests to it.
import { randomUUID } from 'node:crypto';
import { getAppConfig } from '@aws-lambda-powertools/parameters/appconfig';

const SESSION_HEADER = 'X-Amzn-Bedrock-AgentCore-Runtime-Session-Id';

// AgentCore session ids must be at least 33 characters.
export const SESSION_ID = randomUUID().replaceAll('-', '').padEnd(33, '0');

export interface RemoteAgent {
  /** ARN of the deployed Bedrock AgentCore runtime. */
  arn: string;
  /** AWS region parsed from the runtime ARN. */
  region: string;
}

// Returns the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set, otherwise \`undefined\` to chat locally.
export const resolveRemoteAgent = async (): Promise<
  RemoteAgent | undefined
> => {
  const application = process.env.RUNTIME_CONFIG_APP_ID;
  if (!application) {
    return undefined;
  }
  const config = (await getAppConfig('agentcore', {
    application,
    environment: 'default',
    transform: 'json',
  })) as { agentRuntimes?: Record<string, string> };
  const arn = config?.agentRuntimes?.['TestProjectAgent'];
  if (!arn) {
    throw new Error(
      \`No deployed agent named 'TestProjectAgent' found in runtime configuration (application \${application}).\`,
    );
  }
  return { arn, region: arn.split(':')[3] };
};

/** The Cognito access token used to authenticate with the deployed agent. */
export const getAccessToken = (): string => {
  const accessToken = process.env.AGENT_ACCESS_TOKEN;
  if (!accessToken) {
    throw new Error(
      'AGENT_ACCESS_TOKEN is not set. Provide a Cognito access token to chat with the deployed agent.',
    );
  }
  return accessToken;
};

// A \`fetch\` that authenticates requests to the deployed agent and forwards the session id.
export const createAgentCoreFetch = (): typeof fetch => {
  const accessToken = getAccessToken();
  return (input, init) => {
    const headers = new Headers(init?.headers);
    headers.set(SESSION_HEADER, SESSION_ID);
    headers.set('Authorization', \`Bearer \${accessToken}\`);
    return fetch(input, { ...init, headers });
  };
};
"
`;

exports[`ts#agent generator > chat scripts for http protocol > should match snapshot for chat scripts with cognito auth > chat.ts (http, cognito) 1`] = `
"// Chat CLI for TestProjectAgent (HTTP / tRPC WebSocket). Connects to the local
// \`dev\` server, or the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set.
import { chatLoop, type ChatAdapter } from 'agent-chat-cli';
import { TestProjectAgentClient } from '../../src/agent/client.js';
import { resolveRemoteAgent, SESSION_ID, getAccessToken } from './agentcore.js';

const remote = await resolveRemoteAgent();

class TrpcWebSocketAdapter implements ChatAdapter {
  private client!: ReturnType<typeof TestProjectAgentClient.local>;

  async connect(url: string) {
    this.client = remote
      ? TestProjectAgentClient.withJwtAuth({
          agentRuntimeArn: remote.arn,
          sessionId: SESSION_ID,
          accessTokenProvider: async () => getAccessToken(),
        })
      : TestProjectAgentClient.local({ url, sessionId: SESSION_ID });
    return { agentName: 'TestProjectAgent' };
  }

  async *sendMessage(text: string): AsyncIterable<string> {
    const stream = new ReadableStream<string>({
      start: (controller) => {
        this.client.invoke.subscribe(
          { prompt: text },
          {
            onData: (chunk: string) => controller.enqueue(chunk),
            onComplete: () => controller.close(),
            onError: (err: unknown) => controller.error(err),
          },
        );
      },
    });

    yield* stream as unknown as AsyncIterable<string>;
  }
}

await chatLoop(new TrpcWebSocketAdapter(), process.env.URL ?? '');
"
`;

exports[`ts#agent generator > chat scripts for http protocol > should match snapshot for chat scripts with iam auth > agentcore.ts (http, iam) 1`] = `
"// Resolves the deployed TestProjectAgent agent from runtime config and authenticates requests to it.
import { randomUUID } from 'node:crypto';
import { getAppConfig } from '@aws-lambda-powertools/parameters/appconfig';
import { fromNodeProviderChain } from '@aws-sdk/credential-providers';
import { AwsClient } from 'aws4fetch';

const SESSION_HEADER = 'X-Amzn-Bedrock-AgentCore-Runtime-Session-Id';

// AgentCore session ids must be at least 33 characters.
export const SESSION_ID = randomUUID().replaceAll('-', '').padEnd(33, '0');

export interface RemoteAgent {
  /** ARN of the deployed Bedrock AgentCore runtime. */
  arn: string;
  /** AWS region parsed from the runtime ARN. */
  region: string;
}

// Returns the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set, otherwise \`undefined\` to chat locally.
export const resolveRemoteAgent = async (): Promise<
  RemoteAgent | undefined
> => {
  const application = process.env.RUNTIME_CONFIG_APP_ID;
  if (!application) {
    return undefined;
  }
  const config = (await getAppConfig('agentcore', {
    application,
    environment: 'default',
    transform: 'json',
  })) as { agentRuntimes?: Record<string, string> };
  const arn = config?.agentRuntimes?.['TestProjectAgent'];
  if (!arn) {
    throw new Error(
      \`No deployed agent named 'TestProjectAgent' found in runtime configuration (application \${application}).\`,
    );
  }
  return { arn, region: arn.split(':')[3] };
};

// A \`fetch\` that authenticates requests to the deployed agent and forwards the session id.
export const createAgentCoreFetch = (region: string): typeof fetch => {
  const credentialProvider = fromNodeProviderChain();
  return async (input, init) => {
    const headers = new Headers(init?.headers);
    headers.set(SESSION_HEADER, SESSION_ID);
    const client = new AwsClient({
      ...(await credentialProvider()),
      service: 'bedrock-agentcore',
      region,
    });
    return client.fetch(input, { ...init, headers });
  };
};
"
`;

exports[`ts#agent generator > chat scripts for http protocol > should match snapshot for chat scripts with iam auth > chat.ts (http, iam) 1`] = `
"// Chat CLI for TestProjectAgent (HTTP / tRPC WebSocket). Connects to the local
// \`dev\` server, or the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set.
import { chatLoop, type ChatAdapter } from 'agent-chat-cli';
import { TestProjectAgentClient } from '../../src/agent/client.js';
import { resolveRemoteAgent, SESSION_ID } from './agentcore.js';

const remote = await resolveRemoteAgent();

class TrpcWebSocketAdapter implements ChatAdapter {
  private client!: ReturnType<typeof TestProjectAgentClient.local>;

  async connect(url: string) {
    this.client = remote
      ? TestProjectAgentClient.withIamAuth({
          agentRuntimeArn: remote.arn,
          sessionId: SESSION_ID,
        })
      : TestProjectAgentClient.local({ url, sessionId: SESSION_ID });
    return { agentName: 'TestProjectAgent' };
  }

  async *sendMessage(text: string): AsyncIterable<string> {
    const stream = new ReadableStream<string>({
      start: (controller) => {
        this.client.invoke.subscribe(
          { prompt: text },
          {
            onData: (chunk: string) => controller.enqueue(chunk),
            onComplete: () => controller.close(),
            onError: (err: unknown) => controller.error(err),
          },
        );
      },
    });

    yield* stream as unknown as AsyncIterable<string>;
  }
}

await chatLoop(new TrpcWebSocketAdapter(), process.env.URL ?? '');
"
`;

exports[`ts#agent generator > should match snapshot for BedrockAgentCoreRuntime generated constructs files > agent-Dockerfile 1`] = `
"FROM public.ecr.aws/docker/library/node:lts-jod

WORKDIR /app

# Add AWS Distro for OpenTelemetry for observability
# https://docs.aws.amazon.com/bedrock-agentcore/latest/devguide/observability-configure.html
RUN npm install @aws/aws-distro-opentelemetry-node-autoinstrumentation@0.12.0

# Copy bundled agent
COPY index.js /app

EXPOSE 8080

# Auto-instrument with AWS Distro for OpenTelemetry
# https://aws-otel.github.io/docs/getting-started/js-sdk/trace-metric-auto-instr
CMD [ "node", "--require", "@aws/aws-distro-opentelemetry-node-autoinstrumentation/register", "index.js" ]
"
`;

exports[`ts#agent generator > should match snapshot for BedrockAgentCoreRuntime generated constructs files > agent-construct.ts 1`] = `
"import { Fn, Lazy, Names, Stack } from 'aws-cdk-lib';
import { Platform } from 'aws-cdk-lib/aws-ecr-assets';
import { Connections, IConnectable } from 'aws-cdk-lib/aws-ec2';
import { Construct } from 'constructs';
import * as path from 'path';
import * as url from 'url';
import {
  AgentRuntimeArtifact,
  ProtocolType,
  Runtime,
  RuntimeProps,
} from 'aws-cdk-lib/aws-bedrockagentcore';
import {
  PolicyStatement,
  IGrantable,
  IPrincipal,
  Grant,
} from 'aws-cdk-lib/aws-iam';
import { RuntimeConfig } from '../../../core/runtime-config.js';
import { findWorkspaceRoot } from '../../../core/workspace.js';

export type SnapshotBedrockAgentProps = Omit<
  RuntimeProps,
  | 'runtimeName'
  | 'protocolConfiguration'
  | 'agentRuntimeArtifact'
  | 'authorizerConfiguration'
>;

export class SnapshotBedrockAgent
  extends Construct
  implements IGrantable, IConnectable
{
  public readonly dockerImage: AgentRuntimeArtifact;
  public readonly agentCoreRuntime: Runtime;

  constructor(scope: Construct, id: string, props?: SnapshotBedrockAgentProps) {
    super(scope, id);

    const rc = RuntimeConfig.ensure(this);

    // Resolve the bundle output directory containing the Dockerfile and built artifacts
    const bundleDir = path.join(
      findWorkspaceRoot(url.fileURLToPath(new URL(import.meta.url))),
      'dist/apps/test-project/bundle/agent/snapshot-bedrock-agent',
    );

    this.dockerImage = AgentRuntimeArtifact.fromAsset(bundleDir, {
      platform: Platform.LINUX_ARM64,
    });

    this.agentCoreRuntime = new Runtime(this, 'SnapshotBedrockAgent', {
      runtimeName: Lazy.string({
        produce: () =>
          Names.uniqueResourceName(this.agentCoreRuntime, { maxLength: 40 }),
      }),
      protocolConfiguration: ProtocolType.HTTP,
      agentRuntimeArtifact: this.dockerImage,
      ...props,
      environmentVariables: {
        RUNTIME_CONFIG_APP_ID: rc.appConfigApplicationId,
        ...props?.environmentVariables,
      },
    });

    // Grant access for the agent to invoke bedrock models
    this.agentCoreRuntime.addToRolePolicy(
      new PolicyStatement({
        actions: [
          'bedrock:InvokeModel',
          'bedrock:InvokeModelWithResponseStream',
        ],
        resources: [
          'arn:aws:bedrock:*:*:foundation-model/*',
          'arn:aws:bedrock:*:*:inference-profile/*',
        ],
      }),
    );

    rc.grantReadAppConfig(this.agentCoreRuntime);

    rc.set('agentcore', 'agentRuntimes', {
      ...rc.get('agentcore').agentRuntimes,
      SnapshotBedrockAgent: this.agentCoreRuntime.agentRuntimeArn,
    });
  }

  /**
   * The principal to grant permissions to.
   */
  public get grantPrincipal(): IPrincipal {
    return this.agentCoreRuntime.grantPrincipal;
  }

  /**
   * Network connections for this agent runtime.
   */
  public get connections(): Connections {
    return this.agentCoreRuntime.connections;
  }

  /**
   * The HTTPS invocation URL of the runtime.
   */
  public get invocationUrl(): string {
    // The URL must URL-encode the runtime ARN (':' -> '%3A', '/' -> '%2F').
    // The ARN is a CDK token, so encode at deploy time via Fn.join/Fn.split.
    const encodedArn = Fn.join(
      '%2F',
      Fn.split(
        '/',
        Fn.join('%3A', Fn.split(':', this.agentCoreRuntime.agentRuntimeArn)),
      ),
    );
    return \`https://bedrock-agentcore.\${Stack.of(this).region}.amazonaws.com/runtimes/\${encodedArn}/invocations?qualifier=DEFAULT\`;
  }

  /**
   * Grants IAM permissions to invoke this agent runtime.
   *
   * @param grantee - The IAM principal to grant permissions to
   */
  public grantInvokeAccess(grantee: IGrantable) {
    this.agentCoreRuntime.grantInvoke(grantee);

    Grant.addToPrincipal({
      grantee,
      actions: ['bedrock-agentcore:InvokeAgentRuntimeWithWebSocketStream'],
      resourceArns: [
        this.agentCoreRuntime.agentRuntimeArn,
        \`\${this.agentCoreRuntime.agentRuntimeArn}/*\`,
      ],
    });
  }
}
"
`;

exports[`ts#agent generator > should match snapshot for BedrockAgentCoreRuntime generated constructs files > agents-index.ts 1`] = `
"export * from './snapshot-bedrock-agent/snapshot-bedrock-agent.js';
"
`;

exports[`ts#agent generator > should match snapshot for BedrockAgentCoreRuntime generated constructs files > app-index.ts 1`] = `
"export * from './agents/index.js';
"
`;

exports[`ts#agent generator > should match snapshot for BedrockAgentCoreRuntime generated constructs files > core-index.ts 1`] = `
"export * from './app.js';
export * from './checkov.js';
export * from './runtime-config.js';
export * from './workspace.js';
"
`;

exports[`ts#agent generator > should match snapshot for Terraform generated files > terraform-agent.tf 1`] = `
"variable "env" {
  description = "Environment variables to pass to the agent core runtime"
  type        = map(string)
  default     = {}
}

variable "additional_iam_policy_statements" {
  description = "Additional IAM policy statements to attach to the agent core runtime role"
  type = list(object({
    Effect   = string
    Action   = list(string)
    Resource = list(string)
  }))
  default = []
}

variable "tags" {
  description = "Tags to apply to resources"
  type        = map(string)
  default     = {}
}

# VPC Configuration (optional)
variable "enable_vpc" {
  description = "Run the agent core runtime inside a VPC. Set alongside vpc_id/subnet_ids."
  type        = bool
  default     = false
}

variable "vpc_id" {
  description = "VPC ID to run the agent core runtime in. Required when enable_vpc is true."
  type        = string
  default     = null
}

variable "subnet_ids" {
  description = "Subnet IDs to run the agent core runtime in. Required when enable_vpc is true."
  type        = list(string)
  default     = null
}

variable "appconfig_application_id" {
  description = "ID of the shared runtime-config AppConfig application (from \`core/runtime-config/appconfig.application_id\`). The agent reads its runtime configuration from this application."
  type        = string
}

variable "appconfig_application_arn" {
  description = "ARN of the shared runtime-config AppConfig application (from \`core/runtime-config/appconfig.application_arn\`). Used to scope the IAM read permission granted to the agent runtime."
  type        = string
}

module "agent_core_runtime" {
  source = "../../../core/agent-core"
  agent_runtime_name = "TerraformSnapshotAgent"
  docker_image_tag = "proj-terraform-snapshot-agent:latest"
  server_protocol = "HTTP"
  enable_vpc = var.enable_vpc
  vpc_id = var.vpc_id
  subnet_ids = var.subnet_ids

  env = merge({
    RUNTIME_CONFIG_APP_ID = var.appconfig_application_id
  }, var.env)
  additional_iam_policy_statements = concat([
    {
      Effect   = "Allow"
      Action   = [
        "appconfig:StartConfigurationSession",
        "appconfig:GetLatestConfiguration"
      ]
      Resource = ["\${var.appconfig_application_arn}/*"]
    },
    # Grant access for the agent to invoke bedrock models
    {
      Effect = "Allow"
      Action = [
        "bedrock:InvokeModel",
        "bedrock:InvokeModelWithResponseStream"
      ]
      Resource = [
        "arn:aws:bedrock:*:*:foundation-model/*",
        "arn:aws:bedrock:*:*:inference-profile/*"
      ]
    }
  ], var.additional_iam_policy_statements)
  tags = var.tags
}

# Add agent runtime ARN to runtime config
module "add_agent_runtime_to_runtime_config" {
  source = "../../../core/runtime-config/entry"

  namespace = "agentcore"
  key       = "agentRuntimes"
  value     = { "TerraformSnapshotAgent" = module.agent_core_runtime.agent_core_runtime_arn }

  depends_on = [module.agent_core_runtime]
}

output "agent_core_runtime_role_arn" {
  description = "ARN of the agent core runtime role"
  value       = module.agent_core_runtime.agent_core_runtime_role_arn
}

output "agent_core_runtime_arn" {
  description = "ARN of the Bedrock Agent Core runtime"
  value       = module.agent_core_runtime.agent_core_runtime_arn
}

output "invocation_url" {
  description = "HTTPS invocation URL of the runtime"
  value       = module.agent_core_runtime.invocation_url
}

output "appconfig_application_id" {
  description = "AppConfig Application ID for runtime config (passthrough of the shared \`appconfig_application_id\` input)."
  value       = var.appconfig_application_id
}

output "security_group_id" {
  description = "Security group ID of the agent core runtime, for use in ingress rules on resources it must reach (e.g. a database). Null unless enable_vpc is true."
  value       = module.agent_core_runtime.security_group_id
}
"
`;

exports[`ts#agent generator > should match snapshot for Terraform generated files > terraform-agent-core-runtime.tf 1`] = `
"terraform {
  required_version = ">= 1.0"

  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "6.54.0"
    }
    null = {
      source  = "hashicorp/null"
      version = "3.3.0"
    }
    random = {
      source  = "hashicorp/random"
      version = "3.9.0"
    }
  }
}

# Variables
variable "agent_runtime_name" {
  description = "Name of the agent runtime"
  type        = string
  validation {
    condition     = can(regex("^[a-zA-Z][a-zA-Z0-9_]{0,42}$", var.agent_runtime_name))
    error_message = "Value must start with a letter and contain only letters, numbers, and underscores (1-43 characters)."
  }
}

variable "server_protocol" {
  description = "Server protocol for the agent runtime (HTTP, MCP, or A2A)"
  type        = string
  default     = "HTTP"
  validation {
    condition     = contains(["MCP", "HTTP", "A2A"], var.server_protocol)
    error_message = "Protocol type must be either 'mcp', 'http', or 'a2a'."
  }
}

variable "authorizer_configuration" {
  description = "Authorization configuration for authenticating incoming requests"
  type = object({
    custom_jwt_authorizer = optional(object({
      discovery_url    = string
      allowed_audience = optional(list(string))
      allowed_clients  = optional(list(string))
    }))
  })
  default = null
}

variable "docker_image_tag" {
  description = "Name of the docker image tag to use as the agent core runtime"
  type        = string
}

variable "env" {
  description = "Environment variables to pass to the agent core runtime"
  type        = map(string)
  default     = {}
}

variable "additional_iam_policy_statements" {
  description = "Additional IAM policy statements to attach to the agent core runtime role"
  type = list(object({
    Effect   = string
    Action   = list(string)
    Resource = list(string)
  }))
  default = []
}

# VPC Configuration (optional)
variable "enable_vpc" {
  description = "Run the agent core runtime inside a VPC. Set alongside vpc_id/subnet_ids."
  type        = bool
  default     = false
}

variable "vpc_id" {
  description = "VPC ID to run the agent core runtime in. Required when enable_vpc is true."
  type        = string
  default     = null

  validation {
    condition     = !var.enable_vpc || (var.vpc_id != null && var.subnet_ids != null)
    error_message = "vpc_id and subnet_ids must be set when enable_vpc is true."
  }
}

variable "subnet_ids" {
  description = "Subnet IDs to run the agent core runtime in. Required when enable_vpc is true."
  type        = list(string)
  default     = null
}

variable "tags" {
  description = "Tags to apply to resources"
  type        = map(string)
  default     = {}
}

# Data sources
data "aws_caller_identity" "current" {}
data "aws_region" "current" {}

locals {
  aws_account_id = data.aws_caller_identity.current.account_id
  aws_region     = data.aws_region.current.id
}

# Random ID for bucket suffix to ensure uniqueness
resource "random_id" "unique_suffix" {
  byte_length = 4
}

# ECR Repository
resource "aws_ecr_repository" "agent_core_repository" {
  #checkov:skip=CKV_AWS_136:AES256 encryption is sufficient for ECR repositories
  name = "\${lower(var.agent_runtime_name)}_repository_\${random_id.unique_suffix.hex}"

  image_tag_mutability = "IMMUTABLE"
  force_delete         = true

  image_scanning_configuration {
    scan_on_push = true
  }

  tags = var.tags
}

# ECR Repository Policy
resource "aws_ecr_repository_policy" "agent_core_ecr_policy" {
  repository = aws_ecr_repository.agent_core_repository.name

  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Sid    = "AllowPushPull"
        Effect = "Allow"
        Principal = {
          AWS = "arn:aws:iam::\${local.aws_account_id}:root"
        }
        Action = [
          "ecr:GetDownloadUrlForLayer",
          "ecr:BatchGetImage",
          "ecr:BatchCheckLayerAvailability",
          "ecr:PutImage",
          "ecr:InitiateLayerUpload",
          "ecr:UploadLayerPart",
          "ecr:CompleteLayerUpload"
        ]
      }
    ]
  })
}

# IAM Role for Agent Core Runtime
resource "aws_iam_role" "agent_core_runtime_role" {
  name = "\${var.agent_runtime_name}-AgentCoreRuntimeRole-\${random_id.unique_suffix.hex}"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Sid    = "AgentCoreAssumeRolePolicy"
        Effect = "Allow"
        Principal = {
          Service = "bedrock-agentcore.amazonaws.com"
        }
        Action = "sts:AssumeRole"
        Condition = {
          StringEquals = {
            "aws:SourceAccount" = local.aws_account_id
          }
          ArnLike = {
            "aws:SourceArn" = "arn:aws:bedrock-agentcore:\${local.aws_region}:\${local.aws_account_id}:*"
          }
        }
      }
    ]
  })

  tags = var.tags
}

# IAM Policy for Agent Core Runtime
resource "aws_iam_policy" "agent_core_runtime_policy" {
  name        = "\${var.agent_runtime_name}-QueryAgentPolicy-\${random_id.unique_suffix.hex}"
  description = "Restricted policy for Agent"

  policy = jsonencode({
    Version = "2012-10-17"
    Statement = concat([
      {
        Sid    = "ECRImageAccess"
        Effect = "Allow"
        Action = [
          "ecr:BatchGetImage",
          "ecr:GetDownloadUrlForLayer"
        ]
        Resource = [
          aws_ecr_repository.agent_core_repository.arn
        ]
      },
      {
        Sid    = "ECRTokenAccess"
        Effect = "Allow"
        Action = [
          "ecr:GetAuthorizationToken"
        ]
        Resource = [
          "*"
        ]
      },
      {
        "Effect" : "Allow",
        "Action" : [
          "logs:DescribeLogStreams",
          "logs:CreateLogGroup"
        ],
        "Resource" : [
          "arn:aws:logs:\${local.aws_region}:\${local.aws_account_id}:log-group:/aws/bedrock-agentcore/runtimes/*"
        ]
      },
      {
        "Effect" : "Allow",
        "Action" : [
          "logs:DescribeLogGroups"
        ],
        "Resource" : [
          "arn:aws:logs:\${local.aws_region}:\${local.aws_account_id}:log-group:*"
        ]
      },
      {
        "Effect" : "Allow",
        "Action" : [
          "logs:CreateLogStream",
          "logs:PutLogEvents"
        ],
        "Resource" : [
          "arn:aws:logs:\${local.aws_region}:\${local.aws_account_id}:log-group:/aws/bedrock-agentcore/runtimes/*:log-stream:*"
        ]
      },
      {
        "Effect" : "Allow",
        "Action" : [
          "xray:PutTraceSegments",
          "xray:PutTelemetryRecords",
          "xray:GetSamplingRules",
          "xray:GetSamplingTargets"
        ],
        "Resource" : ["*"]
      },
      {
        "Effect" : "Allow",
        "Resource" : "*",
        "Action" : "cloudwatch:PutMetricData",
        "Condition" : {
          "StringEquals" : {
            "cloudwatch:namespace" : "bedrock-agentcore"
          }
        }
      },
      {
        "Sid" : "GetAgentAccessToken",
        "Effect" : "Allow",
        "Action" : [
          "bedrock-agentcore:GetWorkloadAccessToken",
          "bedrock-agentcore:GetWorkloadAccessTokenForJWT",
          "bedrock-agentcore:GetWorkloadAccessTokenForUserId"
        ],
        "Resource" : [
          "arn:aws:bedrock-agentcore:\${local.aws_region}:\${local.aws_account_id}:workload-identity-directory/default",
          "arn:aws:bedrock-agentcore:\${local.aws_region}:\${local.aws_account_id}:workload-identity-directory/default/workload-identity/*"
        ]
      }
    ], var.additional_iam_policy_statements)
  })

  tags = var.tags
}

# Attach the restricted policy to the role
resource "aws_iam_role_policy_attachment" "agent_core_policy" {
  role       = aws_iam_role.agent_core_runtime_role.name
  policy_arn = aws_iam_policy.agent_core_runtime_policy.arn
}

# Data source to get container image digest
data "external" "docker_digest" {
  program = ["sh", "-c", "echo '{\\"digest\\":\\"'$(docker inspect \${var.docker_image_tag} --format '{{.Id}}')'\\"}' "]
}

locals {
  # Content-based, immutable image tag derived from the local image digest
  image_tag = replace(data.external.docker_digest.result.digest, "sha256:", "")
}

# Null resource for container image publish
resource "null_resource" "docker_publish" {
  triggers = {
    docker_digest    = data.external.docker_digest.result.digest
    repository_url   = aws_ecr_repository.agent_core_repository.repository_url
    docker_image_tag = var.docker_image_tag
    image_tag        = local.image_tag
  }

  provisioner "local-exec" {
    command = <<-EOT
      # Get ECR login token
      aws ecr get-login-password --region "$AWS_REGION" | docker login --username AWS --password-stdin "$REPOSITORY_URL"

      # Tag the image with the immutable content-based tag
      docker tag "$DOCKER_IMAGE_TAG" "$REPOSITORY_URL:$IMAGE_TAG"

      # Push the image
      docker push "$REPOSITORY_URL:$IMAGE_TAG"
    EOT
    environment = {
      AWS_REGION       = local.aws_region
      REPOSITORY_URL   = self.triggers.repository_url
      DOCKER_IMAGE_TAG = self.triggers.docker_image_tag
      IMAGE_TAG        = self.triggers.image_tag
    }
  }

  depends_on = [aws_ecr_repository_policy.agent_core_ecr_policy]
}

# Security group for the agent core runtime, used when running inside a VPC
resource "aws_security_group" "agent_core_runtime" {
  count = var.enable_vpc ? 1 : 0

  #checkov:skip=CKV2_AWS_5:Attached to the runtime via network_configuration; Checkov cannot resolve this reference
  name_prefix = "\${var.agent_runtime_name}-runtime-"
  description = "Security group for the \${var.agent_runtime_name} agent core runtime"
  vpc_id      = var.vpc_id
  tags        = var.tags
}

resource "aws_vpc_security_group_egress_rule" "agent_core_runtime_https" {
  count = var.enable_vpc ? 1 : 0

  security_group_id = aws_security_group.agent_core_runtime[0].id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 443
  to_port           = 443
  ip_protocol       = "tcp"
  description       = "Allow outbound HTTPS to AWS service endpoints"
}

# Bedrock AgentCore Agent Runtime
resource "aws_bedrockagentcore_agent_runtime" "agent_runtime" {
  agent_runtime_name = "\${var.agent_runtime_name}_\${random_id.unique_suffix.hex}"
  description        = "Agent Runtime for \${var.agent_runtime_name}"
  role_arn           = aws_iam_role.agent_core_runtime_role.arn

  agent_runtime_artifact {
    container_configuration {
      container_uri = "\${aws_ecr_repository.agent_core_repository.repository_url}:\${local.image_tag}"
    }
  }

  environment_variables = length(var.env) > 0 ? var.env : null

  dynamic "authorizer_configuration" {
    for_each = var.authorizer_configuration != null && try(var.authorizer_configuration.custom_jwt_authorizer, null) != null ? [var.authorizer_configuration.custom_jwt_authorizer] : []
    content {
      custom_jwt_authorizer {
        discovery_url    = authorizer_configuration.value.discovery_url
        allowed_audience = authorizer_configuration.value.allowed_audience
        allowed_clients  = authorizer_configuration.value.allowed_clients
      }
    }
  }

  network_configuration {
    network_mode = var.enable_vpc ? "VPC" : "PUBLIC"

    dynamic "network_mode_config" {
      for_each = var.enable_vpc ? [1] : []
      content {
        security_groups = [aws_security_group.agent_core_runtime[0].id]
        subnets         = var.subnet_ids
      }
    }
  }

  protocol_configuration {
    server_protocol = var.server_protocol
  }

  tags = var.tags

  depends_on = [
    null_resource.docker_publish,
    aws_iam_role_policy_attachment.agent_core_policy
  ]
}

# MCP consumers (e.g. gateway targets, which fetch tools at creation) can race
# the runtime's first cold start, so probe it until it serves MCP. The ARN
# output is routed through this resource so consumers wait for readiness.
resource "null_resource" "runtime_ready" {
  count = var.server_protocol == "MCP" ? 1 : 0

  triggers = {
    runtime_arn = aws_bedrockagentcore_agent_runtime.agent_runtime.agent_runtime_arn
  }

  provisioner "local-exec" {
    command = <<-EOT
      uv run --with boto3==1.43.46 python -c "
import boto3
import json
import os
import time
import uuid

runtime_arn = os.environ['RUNTIME_ARN']
client = boto3.client('bedrock-agentcore')
initialize_request = json.dumps({
    'jsonrpc': '2.0',
    'id': 1,
    'method': 'initialize',
    'params': {
        'protocolVersion': '2025-03-26',
        'capabilities': {},
        'clientInfo': {'name': 'readiness-probe', 'version': '1.0'},
    },
})

deadline = time.time() + 5 * 60
while True:
    try:
        client.invoke_agent_runtime(
            agentRuntimeArn=runtime_arn,
            runtimeSessionId=f'readiness-probe-{uuid.uuid4()}',
            contentType='application/json',
            accept='application/json, text/event-stream',
            payload=initialize_request,
        )
        break
    except Exception:
        if time.time() >= deadline:
            raise
        time.sleep(5)

print(f'Runtime {runtime_arn} is serving MCP')
"
    EOT
    environment = {
      RUNTIME_ARN = self.triggers.runtime_arn
    }
  }
}

# Outputs
locals {
  # For MCP runtimes the ARN flows through the readiness probe, so consumers
  # wait until the runtime serves MCP.
  ready_runtime_arn = var.server_protocol == "MCP" ? null_resource.runtime_ready[0].triggers.runtime_arn : aws_bedrockagentcore_agent_runtime.agent_runtime.agent_runtime_arn
}

output "agent_core_runtime_role_arn" {
  description = "ARN of the Agent Core Runtime IAM role"
  value       = aws_iam_role.agent_core_runtime_role.arn
}

output "agent_core_runtime_role_name" {
  description = "Name of the Agent Core Runtime IAM role"
  value       = aws_iam_role.agent_core_runtime_role.name
}

output "agent_runtime_name" {
  description = "Name of the deployed agent runtime"
  value       = aws_bedrockagentcore_agent_runtime.agent_runtime.agent_runtime_name
}

output "agent_core_runtime_arn" {
  description = "ARN of the Bedrock Agent Core runtime. For MCP runtimes the value flows through the readiness probe, so consumers wait until the runtime serves MCP."
  value       = local.ready_runtime_arn
}

output "invocation_url" {
  description = "HTTPS invocation URL of the runtime. MCP runtimes get the MCP endpoint (e.g. for use as a Gateway target endpoint), A2A runtimes the A2A endpoint (trailing slash required). For MCP runtimes the value flows through the readiness probe, so consumers wait until the runtime serves MCP."
  value       = "https://bedrock-agentcore.\${local.aws_region}.amazonaws.com/runtimes/\${urlencode(local.ready_runtime_arn)}/invocations\${var.server_protocol == "A2A" ? "/" : "?qualifier=DEFAULT"}"
}

output "agent_runtime_id" {
  description = "ID of the Bedrock Agent Core runtime"
  value       = aws_bedrockagentcore_agent_runtime.agent_runtime.agent_runtime_id
}

output "agent_runtime_version" {
  description = "Version of the Bedrock Agent Core runtime"
  value       = aws_bedrockagentcore_agent_runtime.agent_runtime.agent_runtime_version
}

output "security_group_id" {
  description = "Security group ID of the agent core runtime, for use in ingress rules on resources it must reach (e.g. a database). Null unless enable_vpc is true."
  value       = var.enable_vpc ? aws_security_group.agent_core_runtime[0].id : null
}
"
`;

exports[`ts#agent generator > should match snapshot for generated files > agent-agent.ts 1`] = `
"import { Agent, tool } from '@strands-agents/sdk';
import { logModelErrors } from ':proj/agent-connection';
import { z } from 'zod';

const multiply = tool({
  name: 'Multiply',
  description: 'Multiply two numbers',
  inputSchema: z.object({
    a: z.number(),
    b: z.number(),
  }),
  callback: ({ a, b }) => a * b,
});

export const getAgent = async () => {
  const agent = new Agent({
    systemPrompt: \`You are a mathematical wizard.
  Use your tools for mathematical tasks.
  Refer to tools as your 'spellbook'.\`,
    tools: [multiply],
  });
  logModelErrors(agent);
  return agent;
};
"
`;

exports[`ts#agent generator > should match snapshot for generated files > agent-agent-core-mcp-client.ts 1`] = `null`;

exports[`ts#agent generator > should match snapshot for generated files > agent-agent-core-trpc-client.ts 1`] = `
"import { randomUUID } from 'node:crypto';
import { fromNodeProviderChain } from '@aws-sdk/credential-providers';
import {
  createTRPCClient,
  createWSClient,
  WebSocketLinkOptions,
  wsLink,
} from '@trpc/client';
import { AwsClient } from 'aws4fetch';
import { AnyTRPCRouter } from '@trpc/server';
import { WebSocket } from 'node:http';

export interface WebSocketTrpcClientOptions {
  /**
   * URL of the websocket server, eg http://localhost:8080/ws
   */
  url: string;
  /**
   * Session ID to include in the WebSocket handshake headers.
   * Defaults to a random UUID if not provided.
   */
  sessionId?: string;
  /**
   * Factory for creating headers to include in the WebSocket handshake
   */
  buildHeaders?: () => Promise<{ [key: string]: string }>;
}

/**
 * Client for connecting to tRPC APIs via WebSocket
 */
export class WebSocketTrpcClient {
  /**
   * Utility for creating a tRPC client with a WebSocket link and custom headers
   */
  public static create = <TRouter extends AnyTRPCRouter>({
    url,
    sessionId = randomUUID(),
    buildHeaders = async () => ({}),
  }: WebSocketTrpcClientOptions) => {
    let headers = {};
    const client = createWSClient({
      url: async () => {
        headers = {
          ...(await buildHeaders()),
          'X-Amzn-Bedrock-AgentCore-Runtime-Session-Id': sessionId,
        };
        return url;
      },
      WebSocket: class extends WebSocket {
        constructor(wsUrl: string | URL) {
          super(wsUrl, { headers });
        }
      } as any,
    });

    return createTRPCClient<TRouter>({
      links: [wsLink({ client } as WebSocketLinkOptions<TRouter>)],
    });
  };
}

export interface AgentCoreTrpcClientOptions {
  /**
   * The ARN of the Bedrock AgentCore Runtime to connect to
   */
  agentRuntimeArn: string;
  /**
   * Session ID to include in the WebSocket handshake headers.
   * Defaults to a random UUID if not provided.
   */
  sessionId?: string;
}

export interface AgentCoreTrpcClientIamOptions
  extends AgentCoreTrpcClientOptions {
  /**
   * Optional AWS credential provider. If not provided, uses the default
   * credential provider chain from the AWS SDK.
   */
  credentialProvider?: ReturnType<typeof fromNodeProviderChain>;
}

export interface AgentCoreTrpcClientJwtOptions
  extends AgentCoreTrpcClientOptions {
  /**
   * A function which returns the JWT access token used to authenticate
   */
  accessTokenProvider: () => Promise<string>;
}

/**
 * Client for connecting to a tRPC API on Bedrock AgentCore Runtime via WebSocket.
 */
export class AgentCoreTrpcClient {
  /**
   * Construct the websocket url for connecting to Bedrock AgentCore Runtime
   */
  private static buildUrl = (agentRuntimeArn: string) => {
    const region = agentRuntimeArn.split(':')[3];
    const url = \`wss://bedrock-agentcore.\${region}.amazonaws.com/runtimes/\${encodeURIComponent(agentRuntimeArn)}/ws\`;
    return { region, url };
  };

  /**
   * Creates a tRPC client with IAM authentication using AWS credentials.
   *
   * The WebSocket connection is authenticated using AWS Signature Version 4 (SigV4) signed headers.
   * This method signs the WebSocket upgrade request headers directly, rather than using a presigned URL.
   */
  public static withIamAuth = <TRouter extends AnyTRPCRouter>(
    options: AgentCoreTrpcClientIamOptions,
  ) => {
    const credentialProvider =
      options.credentialProvider ?? fromNodeProviderChain();
    const { region, url } = AgentCoreTrpcClient.buildUrl(
      options.agentRuntimeArn,
    );

    return WebSocketTrpcClient.create<TRouter>({
      url,
      sessionId: options.sessionId,
      buildHeaders: async () =>
        Object.fromEntries(
          (
            await new AwsClient({
              ...(await credentialProvider()),
              region,
              service: 'bedrock-agentcore',
            }).sign(url)
          ).headers,
        ),
    });
  };

  /**
   * Creates a tRPC client with JWT (JSON Web Token) authentication.
   *
   * The WebSocket connection includes the JWT as a Bearer token in the Authorization header.
   */
  public static withJwtAuth = <TRouter extends AnyTRPCRouter>(
    options: AgentCoreTrpcClientJwtOptions,
  ) => {
    const { url } = AgentCoreTrpcClient.buildUrl(options.agentRuntimeArn);

    return WebSocketTrpcClient.create<TRouter>({
      url,
      sessionId: options.sessionId,
      buildHeaders: async () => ({
        Authorization: \`Bearer \${await options.accessTokenProvider()}\`,
      }),
    });
  };
}
"
`;

exports[`ts#agent generator > should match snapshot for generated files > agent-client.ts 1`] = `
"import { AppRouter } from './router.js';
import {
  AgentCoreTrpcClient,
  WebSocketTrpcClient,
} from './agent-core-trpc-client.js';

/**
 * Client for connecting to SnapshotAgent on Bedrock AgentCore Runtime via WebSocket from a NodeJS environment
 *
 * Refer to the Nx Plugin for AWS documentation for instructions to connect to this agent in a browser.
 */
export class SnapshotAgentClient {
  /**
   * Creates a tRPC client with IAM authentication using AWS credentials.
   *
   * The WebSocket connection is authenticated using AWS Signature Version 4 (SigV4)
   */
  public static withIamAuth = AgentCoreTrpcClient.withIamAuth<AppRouter>;

  /**
   * Creates a tRPC client with JWT (JSON Web Token) authentication.
   *
   * The WebSocket connection includes the JWT as a Bearer token in the Authorization header.
   */
  public static withJwtAuth = AgentCoreTrpcClient.withJwtAuth<AppRouter>;

  /**
   * Creates a tRPC client for use with a locally running SnapshotAgent.
   */
  public static local = WebSocketTrpcClient.create<AppRouter>;
}
"
`;

exports[`ts#agent generator > should match snapshot for generated files > agent-index.ts 1`] = `
"import { randomUUID } from 'node:crypto';
import { createServer } from 'http';
import {
  CreateHTTPContextOptions,
  createHTTPHandler,
} from '@trpc/server/adapters/standalone';
import { appRouter, AppRouter } from './router.js';
import { WebSocketServer } from 'ws';
import cors from 'cors';
import {
  CreateWSSContextFnOptions,
  applyWSSHandler,
} from '@trpc/server/adapters/ws';
import { Context } from './init.js';

const PORT = parseInt(process.env.PORT || '8080');

const createContext = (
  opts: CreateHTTPContextOptions | CreateWSSContextFnOptions,
): Context => {
  const sessionId =
    ('req' in opts
      ? opts.req.headers['x-amzn-bedrock-agentcore-runtime-session-id']
      : undefined) ?? randomUUID();
  return {
    sessionId: Array.isArray(sessionId) ? sessionId[0] : sessionId,
  };
};

const handler = createHTTPHandler({
  router: appRouter,
  middleware: cors(),
  createContext,
});

const server = createServer((req, res) => {
  const url = new URL(req.url || '', \`https://\${req.headers.host}\`);

  // Handle bedrock agentcore health check
  if (url.pathname === '/ping') {
    res.writeHead(200, { 'Content-Type': 'text/plain' });
    res.end('Healthy');
    return;
  }

  // Handle other requests with tRPC
  handler(req, res);
});

const wss = new WebSocketServer({
  server,
  path: '/ws',
});

applyWSSHandler<AppRouter>({
  wss,
  router: appRouter,
  createContext,
});

server.listen(PORT);

console.log(\`TRPC server listening on port \${PORT}\`);
"
`;

exports[`ts#agent generator > should match snapshot for generated files > agent-init.ts 1`] = `
"import { initTRPC } from '@trpc/server';

export interface Context {
  sessionId: string;
}

export const t = initTRPC.context<Context>().create();

export const publicProcedure = t.procedure;
"
`;

exports[`ts#agent generator > should match snapshot for generated files > agent-router.ts 1`] = `
"import { publicProcedure, t } from './init.js';
import { z } from 'zod';
import { zAsyncIterable } from './schema/z-async-iterable.js';
import { enterSessionContext, withSessionId } from ':proj/agent-connection';
import { getAgent } from './agent.js';

export const router = t.router;

const agent = withSessionId(getAgent);

export const appRouter = router({
  invoke: publicProcedure
    .input(z.object({ prompt: z.string().max(100000) }))
    .output(
      zAsyncIterable({
        yield: z.string(),
        tracked: false,
      }),
    )
    .subscription(async function* (opts) {
      // Bind the session ID for this subscription so downstream MCP / A2A clients forward it on outbound calls.
      enterSessionContext(opts.ctx.sessionId);
      for await (const event of agent.stream(opts.input.prompt)) {
        if (
          event.type === 'modelStreamUpdateEvent' &&
          event.event.type === 'modelContentBlockDeltaEvent' &&
          event.event.delta.type === 'textDelta'
        ) {
          yield event.event.delta.text;
        } else if (event.type === 'modelMessageEvent') {
          yield '\\n';
        }
      }
      return;
    }),
});

export type AppRouter = typeof appRouter;
"
`;

exports[`ts#agent generator > should match snapshot for generated files > agent-z-async-iterable.ts 1`] = `
"import { isTrackedEnvelope, tracked, TrackedEnvelope } from '@trpc/server';
import { z } from 'zod';

function isAsyncIterable<TValue, TReturn = unknown>(
  value: unknown,
): value is AsyncIterable<TValue, TReturn> {
  return !!value && typeof value === 'object' && Symbol.asyncIterator in value;
}

const trackedEnvelopeSchema =
  z.custom<TrackedEnvelope<unknown>>(isTrackedEnvelope);

/**
 * A Zod schema helper designed specifically for validating async iterables. This schema ensures that:
 * 1. The value being validated is an async iterable.
 * 2. Each item yielded by the async iterable conforms to a specified type.
 * 3. The return value of the async iterable, if any, also conforms to a specified type.
 */
export function zAsyncIterable<
  TYieldIn,
  TYieldOut,
  TReturnIn = void,
  TReturnOut = void,
  Tracked extends boolean = false,
>(opts: {
  /**
   * Validate the value yielded by the async generator
   */
  yield: z.ZodType<TYieldOut, TYieldIn>;
  /**
   * Validate the return value of the async generator
   * @remark not applicable for subscriptions
   */
  return?: z.ZodType<TReturnOut, TReturnIn>;
  /**
   * Whether if the yielded values are tracked
   * @remark only applicable for subscriptions
   */
  tracked?: Tracked;
}) {
  return z
    .custom<
      AsyncIterable<
        Tracked extends true ? TrackedEnvelope<TYieldIn> : TYieldIn,
        TReturnIn
      >
    >((val) => isAsyncIterable(val))
    .transform(async function* (iter) {
      const iterator = iter[Symbol.asyncIterator]();
      try {
        let next;
        while ((next = await iterator.next()) && !next.done) {
          if (opts.tracked) {
            const [id, data] = trackedEnvelopeSchema.parse(next.value);
            yield tracked(id, await opts.yield.parseAsync(data));
            continue;
          }
          yield opts.yield.parseAsync(next.value);
        }
        if (opts.return) {
          return await opts.return.parseAsync(next.value);
        }
        return;
      } finally {
        await iterator.return?.();
      }
    }) as z.ZodType<
    AsyncIterable<
      Tracked extends true ? TrackedEnvelope<TYieldIn> : TYieldIn,
      TReturnIn
    >,
    AsyncIterable<
      Tracked extends true ? TrackedEnvelope<TYieldOut> : TYieldOut,
      TReturnOut
    >
  >;
}
"
`;
